# Prokas_CEF

./: .gitignore  CMakeLists.txt  CMakeLists.txt_dst.cmake  MT2MD.diff  readme.md  run.cmd
tst/: CMakeLists.txt
tst/src/: tst.cpp
